# tarea3lenguajesbreakout

./: .gitignore  build.gradle  settings.gradle  startPlayer.bat  startSpectator.bat
JavaDoc/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  type-search-index.js
JavaDoc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-14.html  index-15.html  index-16.html  index-17.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
JavaDoc/org/breakout/: Adapter.html  Ball.html  Client.html  Command.html  GameLoop.html  GameWindow.html  Main.html  PlayerBar.html  package-summary.html  package-tree.html
JavaDoc/org/breakout/blockFactory/: AddBallBlock.html  AddLifeBlock.html  Block.html  BlockFactory.html  MakeBiggerBlock.html  MakeSmallerBlock.html  NoPowerBlock.html  SpeedDownBlock.html  SpeedUpBlock.html  package-summary.html  package-tree.html
JavaDoc/org/breakout/spectator/: SpectatorBall.html  SpectatorClient.html  SpectatorMain.html  SpectatorPlayerBar.html  SpectatorWindow.html  package-summary.html  package-tree.html
src/main/java/org/Server/: CMakeLists.txt  GameData.c  GameData.h  Server  Server.c  constants.h  server.c  server.h
src/main/java/org/breakout/: Adapter.java  App.java  Ball.java  Block.java  Client.java  Command.java  GameLoop.java  GameWindow.java  Main.java  PlayerBar.java  Racket.java  SpectatorSocket.java  (+1 more)
(+18 files in other folders)
